[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/CopyText.gd" type="Script" id=1]
[ext_resource path="res://src/FontColorPicker.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=12]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0431373, 0.196078, 0.462745, 1 )
border_width_bottom = 5
border_color = Color( 0.0196078, 0.164706, 0.427451, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0196078, 0.164706, 0.427451, 1 )
border_width_top = 5
border_color = Color( 0.0196078, 0.164706, 0.427451, 0 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.321569, 0.603922, 1 )
border_width_bottom = 5
border_color = Color( 0.0196078, 0.164706, 0.427451, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="CopyText" type="Button"]
anchor_right = 1.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 60 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_right = -6.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyButton" type="Button" parent="HBox"]
margin_right = 200.0
margin_bottom = 115.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "Copy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="HBox"]
margin_left = 204.0
margin_right = 1012.0
margin_bottom = 115.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Copy this text"
bookmark_gutter = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" parent="HBox/TextEdit" instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -57.5
margin_bottom = 57.5
text_edit_path = NodePath("..")

[connection signal="pressed" from="HBox/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="text_changed" from="HBox/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="color_changed" from="HBox/TextEdit/ColorPickerButton" to="." method="set_font_color"]
